HEAD
	+ Adapt checking of existent mail to mailboxRelatedObject needs
3.4.4
	+ Do not duplicate cloud ops when REST call fails
3.4.3
	+ Display message when creating a user which username has more
	  than 20 characters
	+ Fixed error when editing user email address when mail module is
	  not installed
3.4.2
	+ Fix domain controllers shown on the computers OU in Manage model
	+ Using paged serch in EBox::Users::users() method
	+ Added EBox::LDAPBase::pagedSearch method
	+ Added support for addon components when user is in a
	  non-standard OU
	+ Better control for edit user quota
	+ Sent zentyal-usercorner trigger on install / upgrade to restart it if
	  it's installed
3.4.1
	+ Fixed bug when altering mail address through the edit user form
	+ Better integration between mail addon and mail field
	+ Remove method canonicalName and use object DNs for greater performance
	+ Migrate previous configuration from 3.3 when upgrading
3.4
	+ Updated EBox::Users::Model::Password to use
	  EBox::Usercorner::updateSessionPassword method and the new samba
	  location
	+ Stop changing users and contacts' cn field on object edition, allowed to
	  edit the displayName field, just as Windows does
	+ Disable OpenLDAP users sync in favor of Samba AD replication
	+ Avoid warning when checking whether we are in the usercorner
	+ Updated to use Plack / PSGI instead of mod_perl
	+ Updated to use the new haproxy API
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Fixed soap.conf for apache 2.4
	+ Depend on apache2-utils, required to run htpasswd
	+ Set version to 3.4
	+ Add script to update the credentials when mode is external AD
	+ Added and used checkMailNotInUse method
	+ Updated cloud sync to ignore any change done in cloud to internal users
	  or groups
	+ Fixed EBox::CloudSync::Slave to sync uid and gid numbers on user update
	  and added unit tests for it
	+ Added EBox::Users::Group::setInternal method