@@ -1,4 +1,5 @@
 HEAD
+	+ Hide krbtgt user in external AD mode
 	+ Adapt checking of existent mail to mailboxRelatedObject needs
 3.4.4
 	+ Do not duplicate cloud ops when REST call fails
